--- a/notes/Vehicle.org
+++ b/notes/Vehicle.org
@@ -1,13 +1,5 @@
-* 获取可租车型接口
-  该接口用于在短租页面选车页获取可租车列表
-** 接口说明
-    URI： http://ip:port/mycar/vehicle/info/{begin}/{end}/
-    METHOD：GET
-** 请求参数说明
-   {begin} 为用户想要租车的起始时间的UNIX时间戳，单位为秒。
-   {end} 为用户想要还车的结束时间的UNIX时间戳，单位为秒。
-** 返回结构
-   返回的结果中data为一个List类型，其中List中表示的就是车的类型，具体字段如下：
+* 数据结构
+** VehicleInfo 汽车车系信息结构
    | 字段           | 类型    | 说明                         |
    |----------------+---------+------------------------------|
    | id             | Integer | 当前车型的ID                 |
@@ -23,6 +15,17 @@
    | free_insurance | Double  | 免责保险费                   |
    | total_cost     | Double  | 总共租车费用                 |
 
+* 获取可租车型接口
+  该接口用于在短租页面选车页获取可租车列表
+** 接口说明
+    URI： http://ip:port/mycar/vehicle/info/{begin}/{end}/
+    METHOD：GET
+** 请求参数说明
+   {begin} 为用户想要租车的起始时间的UNIX时间戳，单位为秒。
+   {end} 为用户想要还车的结束时间的UNIX时间戳，单位为秒。
+** 返回结构
+   返回的结果中data为一个List<VehicleInfo>对象，具体字段参考：[[*VehicleInfo 汽车车系信息结构][VehicleInfo 汽车车系信息结构]]
+
 * 获取具体车型的接口
   该接口用于在租车页面下订单页，获取选择的对应车型的信息
 ** 接口说明
@@ -33,18 +36,4 @@
    + {begin} :: 为用户想要租车的起始时间的UNIX时间戳，单位为秒。
    + {end} :: 为用户想要还车的结束时间的UNIX时间戳，单位为秒。
 ** 返回结构
-   具体字段如下：
-   | 字段           | 类型    | 说明                         |
-   |----------------+---------+------------------------------|
-   | id             | Integer | 当前车型的ID                 |
-   | name           | String  | 车系名称                     |
-   | brand          | String  | 品牌                         |
-   | displacement   | Double  | 排量                         |
-   | gearbox        | String  | 变速箱                       |
-   | boxes          | String  | 几厢车                       |
-   | manned         | Integer | 乘员量                       |
-   | description    | String  | 车辆的其他描述，当前还未使用 |
-   | day_cost       | Double  | 日租价格                     |
-   | base_insurance | Double  | 基础保险费                   |
-   | free_insurance | Double  | 免责保险费                   |
-   | total_cost     | Double  | 总共租车费用                 |
+   返回结构中data为VehicleInfo结构体，参考字段：[[*VehicleInfo 汽车车系信息结构][VehicleInfo 汽车车系信息结构]]
