Add Order By Id

--- a/notes/Order.org
+++ b/notes/Order.org
@@ -42,7 +42,6 @@
    | FINISHED |      4 | 退款完成                           |
    | CANCLED  |      5 | 取消的订单                         |
 
-
 * 订单获取接口
   该接口用于后端管理页面根据订单状态获取当前订单的接口
 ** 接口说明
@@ -52,6 +51,16 @@
    {status} 为订单状态，具体值参考[[*订单状态说明][订单状态说明]]
 ** 返回结构
    返回的结构体是一个List<Order>对象，具体字段参考:[[*Order 数据结构][Order 数据结构]]。
+
+* 订单获取接口
+  该接口根据订单ID获取ID详情
+** 接口说明
+   URI: http://ip:port/mycar/order/{oid}/
+   METHOD: GET
+** 请求参数说明
+   {oid} 为订单ID
+** 返回结构
+   返回的结构体是一个Order对象，具体字段参考:[[*Order 数据结构][Order 数据结构]]。
 
 * 提交订单
   该接口为用户添加订单的接口
