Add get vehicle by viid and status interface

--- a/notes/Order.org
+++ b/notes/Order.org
@@ -42,6 +42,12 @@
    | FINISHED |      4 | 退款完成                           |
    | CANCLED  |      5 | 取消的订单                         |
 
+* 订单数量获取接口
+  该接口用于后端管理页面获取所有不同状态的订单数量
+** 接口说明
+   URI: http://ip:port/mycar/orders/number/
+   METHOD: GET
+
 * 订单获取接口
   该接口用于后端管理页面根据订单状态获取当前订单的接口
 ** 接口说明
