--- a/notes/Order.org
+++ b/notes/Order.org
@@ -23,6 +23,7 @@
    | identity       | String    | 身份证                                           |
    | phone          | String    | 手机号                                           |
    | bill           | String    | 发票信息                                         |
+   | is_free_insurance | Integer    | 是否缴免责保险	0 否 , 1是							|
    | pre_cost       | String    | 租车的基本信息 |
    | pay_info       | String    | 用户支付信息，json串，需要打印出来给用户签字确认 |
    | rbegin         | Timestamp | 实际的借车时间                                   |
