Add Delete Vehicle Interface

--- a/notes/ChangeLog
+++ b/notes/ChangeLog
@@ -1,3 +1,8 @@
+	2017-11-13:
+	1.增加车辆删除逻辑（增加未来订单检测&增加强制删除逻辑）
+	--------------------------------------------------
+	1.接口（http://ip:port/mycar/vechile/{vid}/{force}/ ,method=DELETE），如果force=1,则强制删除，否则会考量该车辆的状态是否是未在租，并且未来订单不是绝对多到没法删除。
+
 	2017-11-10:
 	1.车型信息，加入默认价格的设定，现在都默认是100元/天。
 	2.车型信息，加入“油品标号_______号以上”。
