update Account update and delete logic

--- a/notes/ChangeLog
+++ b/notes/ChangeLog
@@ -1,3 +1,6 @@
+	2017-11-17:
+	1.修改用户更新接口，增加用户角色更新逻辑
+	2.修改用户删除接口，增加删除用户名和登陆用户名检测逻辑，才删除当前会话
 	2017-11-13:
 	1.增加车辆删除逻辑（增加未来订单检测&增加强制删除逻辑）
 	--------------------------------------------------
